--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-package-scaffold",
+  "name": "editor-core",
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
